--- a/favorites.html
+++ b/favorites.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link href="css/styles.css" rel="stylesheet" />
-    <title>Home|Login</title>
+    <title>Favorites</title>
   </head>
   <body>
     <div class="container">
@@ -18,11 +18,9 @@
         <a href="favorites.html">Favorites</a>
       </div>
       <div class="menu-container">
-        <h1>Articles</h1>
-        <input class="search" placeholder="Search..." />
-        <div class="article-container">Loading articles...</div>
+        <div class="article-container"></div>
       </div>
     </div>
-    <script src="js/index.js" type="module"></script>
+    <script src="js/favorites.js" type="module"></script>
   </body>
 </html>
