--- a/favorites.html
+++ b/favorites.html
@@ -18,6 +18,7 @@
         <a href="favorites.html">Favorites</a>
       </div>
       <div class="menu-container">
+        <h1>Favorites</h1>
         <div class="article-container"></div>
       </div>
     </div>
