--- a/favorites.html
+++ b/favorites.html
@@ -21,6 +21,7 @@
         <h1>Favorites</h1>
         <div class="article-container"></div>
       </div>
+      <button id="clear" type="button">Clear All</button>
     </div>
     <script src="js/favorites.js" type="module"></script>
   </body>
