--- a/favorites.html
+++ b/favorites.html
@@ -14,8 +14,9 @@
   <body>
     <div class="container">
       <div class="menu">
-        <a href="index.html" class="active">Home</a> |
-        <a href="favorites.html">Favorites</a>
+        <a href="index.html">Home</a> |
+        <a href="favorites.html" class="active">Favorites</a>
+        <a href="login.html">Login</a>
       </div>
       <div class="menu-container">
         <h1>Favorites</h1>
