--- a/login.html
+++ b/login.html
@@ -9,21 +9,31 @@
       rel="stylesheet"
     />
     <link href="css/styles.css" rel="stylesheet" />
-    <title>Home</title>
+    <title>Login</title>
   </head>
   <body>
     <div class="container">
       <div class="menu">
         <a href="index.html" class="active">Home</a> |
         <a href="favorites.html">Favorites</a>
-        <a href="login.html">Login</a>
+        <a href="login.html" class="active">Login</a>
       </div>
       <div class="menu-container">
-        <h1>Articles</h1>
-        <input class="search" placeholder="Search..." />
-        <div class="article-container">Loading articles...</div>
+        <h1>Login</h1>
+        <form>
+          <div class="message-container"></div>
+          <div>
+            <label for="username"> Username/email</label>
+            <input id="username" />
+          </div>
+          <div>
+            <label for="password"> Password</label>
+            <input id="password" />
+          </div>
+          <button>Submit</button>
+        </form>
       </div>
     </div>
-    <script src="js/index.js" type="module"></script>
+    <script src="./js/login.js" type="module"></script>
   </body>
 </html>
