--- a/favorites.html
+++ b/favorites.html
@@ -13,12 +13,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="menu">
+      <!-- <div class="menu">
         <a href="index.html">Home</a> |
         <a href="favorites.html" class="active">Favorites</a>
         <a href="login.html">Login</a>
-      </div>
-      <div class="menu-container">
+      </div> -->
+      <div class="menu-container"></div>
+      <div>
         <h1>Favorites</h1>
         <div class="article-container"></div>
       </div>
