--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="menu">
-        <a href="index.html" class="active">Home</a> |
-        <a href="favorites.html">Favorites</a>
-        <a href="login.html">Login</a>
-      </div>
       <div class="menu-container">
+        <!-- <div class="menu">
+          <a href="index.html" class="active">Home</a> |
+          <a href="favorites.html">Favorites</a>
+          <a href="login.html">Login</a>
+        </div> -->
+      </div>
+      <div>
         <h1>Articles</h1>
         <input class="search" placeholder="Search..." />
         <div class="article-container">Loading articles...</div>
