--- a/login.html
+++ b/login.html
@@ -13,12 +13,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="menu">
+      <!-- <div class="menu">
         <a href="index.html" class="active">Home</a> |
         <a href="favorites.html">Favorites</a>
         <a href="login.html" class="active">Login</a>
-      </div>
-      <div class="menu-container">
+      </div> -->
+      <div class="menu-container"></div>
+      <div>
         <h1>Login</h1>
         <form>
           <div class="message-container"></div>
