--- a/edit.html
+++ b/edit.html
@@ -30,7 +30,7 @@
           <textarea id="summary"></textarea>
         </div>
 
-        <input id="id" />
+        <input id="id" type="hidden" />
 
         <div>
           <button id="update">Update</button>
