--- a/edit.html
+++ b/edit.html
@@ -35,6 +35,7 @@
         <div>
           <button id="update">Update</button>
         </div>
+        <div class="delete-container"></div>
       </form>
     </div>
     <script src="js/edit.js" type="module"></script>
